samples/_failures_safe/1761530199_023625_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc2fc138.c: In function ‘main’:
./samples/SAFE/__tmp_fc2fc138.c:130:68: error: ‘MAX_D’ undeclared (first use in this function); did you mean ‘MAX_DIM’?
  130 |     int cols1 = read_int("Enter columns for matrix A (1-16): ", 1, MAX_D
      |                                                                    ^~~~~
      |                                                                    MAX_DIM
./samples/SAFE/__tmp_fc2fc138.c:130:68: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_fc2fc138.c:130:73: error: expected ‘)’ at end of input
  130 |     int cols1 = read_int("Enter columns for matrix A (1-16): ", 1, MAX_D
      |                         ~                                               ^
      |                                                                         )
./samples/SAFE/__tmp_fc2fc138.c:130:5: error: expected declaration or statement at end of input
  130 |     int cols1 = read_int("Enter columns for matrix A (1-16): ", 1, MAX_D
      |     ^~~
